Fix issue that caused the .modal background-image to not fully span the whole modal width on smaller screens by removing background-attachment fixed

--- a/src/common/components/Modal/Modal.scss
+++ b/src/common/components/Modal/Modal.scss
@@ -26,7 +26,6 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed;
   overflow: auto;
   transform: translate(-50%, -50%);
   transform-origin: top left;
